fix: completed the unfinished module "intro to css"

--- a/Lab1/khanacademy/2-intro-to-css/5-colorful-creature.html
+++ b/Lab1/khanacademy/2-intro-to-css/5-colorful-creature.html
@@ -5,7 +5,10 @@
     <title>Challenge: Colorful Creature</title>
     <style>
         body {
-            background-color: #f3f6cd;
+            background-color: rgb(249, 250, 238);
+        }
+        p, h1 {
+            color: rgb(185, 178, 88);
         }
     </style>
 </head>
@@ -13,7 +16,7 @@
 
 <h1>Cheetah — The Coolest Creature</h1>
 
-<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/92/Male_cheetah_facing_left_in_South_Africa.jpg/1920px-Male_cheetah_facing_left_in_South_Africa.jpg"
+<img src="https://cdn.kastatic.org/third_party/javascript-khansrc/live-editor/build/images/animals/cheetah.png"
      width="300">
 <p>
     The <strong>cheetah</strong> (<em>Acinonyx jubatus</em>) is a unique member of the feline family, renowned for its
