--- a/Lab1/khanacademy/2-intro-to-css/7-apples-and-bananas-classes.html
+++ b/Lab1/khanacademy/2-intro-to-css/7-apples-and-bananas-classes.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8">
     <title>Challenge: Apples and bananas classes</title>
     <style>
-    .apples {
-        color: #e05e5e;
-    }
-    .bananas {
-        color: #dcdc2c;
-    }
+        .apples {
+            color: #e05e5e;
+        }
+        .bananas {
+            color: #dcdc2c;
+        }
     </style>
 </head>
 <body>
@@ -54,8 +54,8 @@
     <strong class="apples">uupples</strong> and
     <strong class="bananas">bununus</strong>.<br>
     I like to eat eat eat
-    <strong>apples</strong> and
-    <strong>bananas</strong>.<br>
+    <strong class="apples">apples</strong> and
+    <strong class="bananas">bananas</strong>.<br>
 </p>
 
 </body>
