fix: completed the unfinished module "more html tags"

--- a/Lab1/khanacademy/3-more-html-tags/9-links-for-learning.html
+++ b/Lab1/khanacademy/3-more-html-tags/9-links-for-learning.html
@@ -13,8 +13,9 @@
     <li><a href="https://www.youtube.com">YouTube</a></li>
     <li><a href="https://chatgpt.com">Chat GPT</a></li>
 </ul>
-
-<img src="https://www.kasandbox.org/programming-images/cute/Heart.png">
+<a href="https://www.youtube.com">
+    <img src="https://www.kasandbox.org/programming-images/cute/Heart.png">
+</a>
 
 </body>
 </html>
