fix: completed the unfinished module "css text properties"

--- a/Lab1/khanacademy/4-css-text-properties/13-fancy-font-families.html
+++ b/Lab1/khanacademy/4-css-text-properties/13-fancy-font-families.html
@@ -9,11 +9,15 @@
         }
 
         #jetsons {
-            font-family: "Comic Sans MS";
+            font-family: sans-serif;
         }
 
         #addams {
             font-family: cursive;
+        }
+
+        body {
+            font-family: monospace;
         }
     </style>
 </head>
