fix: completed the unfinished module "css layout"

--- a/Lab1/khanacademy/5-css-layout/20-position-planet.html
+++ b/Lab1/khanacademy/5-css-layout/20-position-planet.html
@@ -10,16 +10,16 @@
       font-family: "Comic Sans MS", fantasy;
       padding: 5px;
       width: 262px;
-
-      position: relative;
-      bottom: 250px;
-      left: 220px;
+      position: absolute;
+      top: 0px;
+      left: 150px;
+      z-index: 1;
     }
 
     #creature {
-      position: relative;
-      bottom: 350px;
-      left: 70px;
+      position: absolute;
+      top: 40px;
+      left: 80px;
     }
   </style>
 </head>
