--- a/Lab1/khanacademy/5-css-layout/18-the-overflowing-ocean.html
+++ b/Lab1/khanacademy/5-css-layout/18-the-overflowing-ocean.html
@@ -10,6 +10,10 @@
             height: 200px;
             overflow: auto;
         }
+        .pic {
+            width: 70%;
+            height: auto;
+        }
     </style>
 </head>
 <body>
