--- a/Lab1/khanacademy/5-css-layout/21-floating-clouds.html
+++ b/Lab1/khanacademy/5-css-layout/21-floating-clouds.html
@@ -13,9 +13,13 @@
         #cloud-pic {
             width: 100px;
             float: left;
+            margin: 5px;
         }
         #cloud-sidebar {
             background: rgb(255, 255, 219);
+            float: right;
+            width: 30%;
+            margin: 5px;
         }
     </style>
 </head>
@@ -31,7 +35,6 @@
     <p>Yellowish clouds may occur in the late spring through early fall months during forest fire season. The yellow color is due to the presence of pollutants in the smoke. Yellowish clouds caused by the presence of nitrogen dioxide are sometimes seen in urban areas with high air pollution levels.
     </p>
 </div>
-
 <p>In meteorology, a cloud is a visible mass of liquid droplets or frozen crystals made of water or various chemicals suspended in the atmosphere above the surface of a planetary body. These suspended particles are also known as aerosols and are studied in the cloud physics branch of meteorology.</p>
 
 <p>Terrestrial cloud formation is the result of air in Earth's atmosphere becoming saturated due to either or both of two processes: cooling of the air and adding water vapor. With sufficient saturation, precipitation will fall to the surface.</p>
