fix: completed the unfinished module "more css selectors"

--- a/Lab1/khanacademy/6-more-css-selectors/23-classes-of-element.html
+++ b/Lab1/khanacademy/6-more-css-selectors/23-classes-of-element.html
@@ -18,6 +18,14 @@
             background: red;
             color: white;
         }
+        h2.non-metal {
+            background: blue;
+            color: white;
+        }
+        h2.semi-metal {
+            background: purple;
+            color: white;
+        }
     </style>
 </head>
 <body>
