--- a/Lab1/khanacademy/6-more-css-selectors/24-descendants-of-khan.html
+++ b/Lab1/khanacademy/6-more-css-selectors/24-descendants-of-khan.html
@@ -11,8 +11,11 @@
     .reign {
       font-family: monospace;
     }
-    td.emperor {
-      background: #96c0ee;
+    table .emperor {
+      background-color: rgb(150, 192, 238);
+    }
+    table .reign {
+      background-color: rgb(147, 220, 75);
     }
   </style>
 </head>
