Completed all modules of udacity

--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -5,5 +5,10 @@
     <title>Title</title>
 </head>
 <body>
+<picture>
+    <source srcset='avatar.png'>
+    <source srcset='mustang.jpg'>
+</picture>
+What will be the result if the browser supports both images?
 </body>
 </html>
