--- a/Lab3/ToDoList/index.html
+++ b/Lab3/ToDoList/index.html
@@ -17,7 +17,13 @@
         <input id="taskInput" type="text" placeholder="New Task">
         <button id="addBtn">Add</button>
     </div>
-    <ul id="todoList" class="todo-list"></ul>
+    Completed
+    <ul id="todoListComleted" class="todo-list">
+    </ul>
+    Uncompleted
+    <ul id="todoListUncomleted" class="todo-list">
+    </ul>
+
 </div>
 
 <script src="script.js"></script>
